@@ -1191,6 +1191,7 @@ upnp.alertothermappings=Report ports owned by other computers
 upnp.alertdeviceproblems=Report problems with the UPnP device
 upnp.trace_to_log=Output full debug information to log
 upnp.wiki_link=Vuze Wiki page on UPnP
+upnp.refresh_mappings_on_bad_nat=Automatically refresh mappings when NAT status is "firewalled"
 blank.resource=
 ConfigView.pluginlist.coreplugins=The following built-in plugins are loaded:
 Peers.column.DLedFromOthers=From Others
