@@ -9,6 +9,7 @@ FEATURE: UI   | Console command "show" can now filter to list only torrents whic
 FEATURE: UIv3 | SideBar (F7 to Hide/Show) [TuxPaper]
 
 CHANGE: Core  | Improved handling of mixed IPv4 and IPv6 bindings [The 8472]
+CHANGE: Core  | New option to refresh UPnP mappings when we become firewalled [amc1]
 CHANGE: UI    | Debug messages are no longer displayed by default when running the console UI [amc1]
 CHANGE: UI    | The comment icon column now displays a blank icon if there is no comment (rather than no icon) [amc1]
 CHANGE: UI    | Delete priority is now properly reflected in the Priority column [The 8472]
